TestSuite/errors/err0054.pas
const a : array of integer = (1,2,3);

begin
SetLength(a,5);
end.